tests/NormalTests/paczka1/fuzzy1/80183449.err
Error in line 4: A99 S378 84,1
Error in line 6: A99 A99 28,6
Error in line 7: A99 A570 18,3
Error in line 22: S40knf S378 76,2
Error in line 13: tDVBFJeyTof A99 228,0
